overflow x fixed ?

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -362,6 +362,10 @@ html, body {
   overflow-x: hidden;
 }
 
+body {
+  position: relative;
+}
+
 /* -------------------------------------------------------------------------- */
 /*                                    LOGO                                    */
 /* -------------------------------------------------------------------------- */
